finished review section and price section (without adaptation)

--- a/index.html
+++ b/index.html
@@ -699,11 +699,153 @@
                     </p>
                     <a href="#" class="buttonLink buttonFooterSection">Contact Us</a>
                 </div>
-
             </section>
-
-
         </main>
+        <section class="b-reviews">
+            <div class="b-reviews__title">
+                <h2 class="b-sectionTitle sectionTitleCenter">Testimonials</h2>
+                <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus et iusto odio
+                    dignissimos ducimus qui <br> blanditiis praesentium
+                </p>
+            </div>
+            <div id="carouselExampleControls" class="carousel slide b-reviews__carousel" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="b-reviews__carouselItem row">
+                            <div class="b-reviews__imgBox col-lg-2">
+                                <img src="images/testimonials-img.png" class="b-reviews__img" alt="review-img">
+                            </div>
+                            <div class="b-reviews__reviewBox col-lg-8">
+                                <p class="b-reviews__reviewText">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui
+                                    blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
+                                    molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
+                                    qui officia deserunt mollitia.
+                                </p>
+                                <p class="b-reviews__reviewName">PARTHO</p>
+                                <p class="b-reviews__reviewProf">FOUNDER, ARTWAYS BD</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="b-reviews__carouselItem row">
+                            <div class="b-reviews__imgBox col-lg-2">
+                                <img src="images/testimonials-img.png" class="b-reviews__img" alt="review-img">
+                            </div>
+                            <div class="b-reviews__reviewBox col-lg-8">
+                                <p class="b-reviews__reviewText">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui
+                                    blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
+                                    molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
+                                    qui officia deserunt mollitia.
+                                </p>
+                                <p class="b-reviews__reviewName">PARTHO</p>
+                                <p class="b-reviews__reviewProf">FOUNDER, ARTWAYS BD</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="b-reviews__carouselItem row">
+                            <div class="b-reviews__imgBox col-lg-2">
+                                <img src="images/testimonials-img.png" class="b-reviews__img" alt="review-img">
+                            </div>
+                            <div class="b-reviews__reviewBox col-lg-8">
+                                <p class="b-reviews__reviewText">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui
+                                    blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
+                                    molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
+                                    qui officia deserunt mollitia.
+                                </p>
+                                <p class="b-reviews__reviewName">PARTHO</p>
+                                <p class="b-reviews__reviewProf">FOUNDER, ARTWAYS BD</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </section>
+        <section class="b-price">
+            <div class="b-price__title">
+                <h2 class="b-sectionTitle sectionTitleCenter">Our Price</h2>
+                <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus et iusto odio
+                    dignissimos ducimus qui <br> blanditiis praesentium
+                </p>
+            </div>
+
+            <div class="b-price__blockWrap row">
+                <div class="b-animationBox col-lg-2 col-md-3">
+                    <article class="b-animationBox__front">
+                        <h2 class="b-price__blockTitle">Standard</h2>
+                        <p class="b-price__blockPrice">40&#36;</p>
+                        <p class="b-price__blockDesc">Per Month</p>
+                    </article>
+                    <div class="b-animationBox__back">
+                        <ul class="b-price__hoverList">
+                            <li class="b-price__hoverItems">Full Branding</li>
+                            <li class="b-price__hoverItems">Project Management </li>
+                            <li class="b-price__hoverItems">Unlimited Revisions</li>
+                            <li class="b-price__hoverItems">24/7 h Service</li>
+                            <li class="b-price__hoverItems">Free Domain</li>
+                            <li class="b-price__hoverItems">Free Hosting</li>
+                        </ul>
+                        <div class="b-price__hoverButton"><a class="b-price__hoverLink" href="#">Let’s Start ></a></div>
+                    </div>
+                </div>
+
+                <div class="b-animationBox col-lg-2 col-md-3">
+                    <article class="b-animationBox__front">
+                        <h2 class="b-price__blockTitle">Premium</h2>
+                        <p class="b-price__blockPrice">60&#36;</p>
+                        <p class="b-price__blockDesc">Per Month</p>
+                    </article>
+                    <div class="b-animationBox__back">
+                        <ul class="b-price__hoverList">
+                            <li class="b-price__hoverItems">Full Branding</li>
+                            <li class="b-price__hoverItems">Project Management </li>
+                            <li class="b-price__hoverItems">Unlimited Revisions</li>
+                            <li class="b-price__hoverItems">24/7 h Service</li>
+                            <li class="b-price__hoverItems">Free Domain</li>
+                            <li class="b-price__hoverItems">Free Hosting</li>
+                        </ul>
+                        <div class="b-price__hoverButton"><a class="b-price__hoverLink" href="#">Let’s Start ></a></div>
+                    </div>
+                </div>
+
+                <div class="b-animationBox col-lg-2 col-md-3">
+                    <article class="b-animationBox__front">
+                        <h2 class="b-price__blockTitle">Exclusive</h2>
+                        <p class="b-price__blockPrice">80&#36;</p>
+                        <p class="b-price__blockDesc">Per Month</p>
+                    </article>
+                    <div class="b-animationBox__back">
+                        <ul class="b-price__hoverList">
+                            <li class="b-price__hoverItems">Full Branding</li>
+                            <li class="b-price__hoverItems">Project Management </li>
+                            <li class="b-price__hoverItems">Unlimited Revisions</li>
+                            <li class="b-price__hoverItems">24/7 h Service</li>
+                            <li class="b-price__hoverItems">Free Domain</li>
+                            <li class="b-price__hoverItems">Free Hosting</li>
+                        </ul>
+                        <div class="b-price__hoverButton"><a class="b-price__hoverLink" href="#">Let’s Start ></a></div>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+        </section>
 
 
     </div>
