finished subscribe section

--- a/index.html
+++ b/index.html
@@ -839,11 +839,23 @@
                         <div class="b-price__hoverButton"><a class="b-price__hoverLink" href="#">Let’s Start ></a></div>
                     </div>
                 </div>
-
-
             </div>
-
-
+        </section>
+        <section class="b-subscribe">
+            <div class="b-subscribe__titleBox">
+                <h2 class="b-sectionTitle sectionTitleCenter b-subscribe__title">Subscribe us</h2>
+                <p class="b-sectionTitle__subtitle sectionSubtitleCenter b-subscribe__subTitle">At vero eos et accusamus
+                    et iusto odio
+                    dignissimos ducimus qui <br> blanditiis praesentium
+                </p>
+            </div>
+            <form class="b-subscribe__form row">
+                <div class="form-group col-md-4 col-sm-8">
+                    <input type="email" class="form-control b-subscribe__email" id="exampleInputEmail1"
+                        aria-describedby="emailHelp" placeholder="Email Address">
+                </div>
+                <button type="submit" class="btn btn-primary b-subscribe__submitBtn col-md-2">Submit</button>
+            </form>
 
         </section>
 
