--- a/index.html
+++ b/index.html
@@ -856,8 +856,84 @@
                 </div>
                 <button type="submit" class="btn btn-primary b-subscribe__submitBtn col-md-2">Submit</button>
             </form>
+        </section>
+        <section class="b-contact">
+            <div class="b-contact__titleBox">
+                <h2 class="b-sectionTitle sectionTitleCenter"> Contact Us</h2>
+                <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus
+                    et iusto odio
+                    dignissimos ducimus qui <br> blanditiis praesentium
+                </p>
+            </div>
+            <div class="b-contact__wrap row">
+                <div class="b-contact__items col-md-3 col-sm-7">
+                    <div class="b-contact__emailImg">
+                        <div class="b-contact__imgUp">
+                            <a href="#" class="b-contact__link"><i
+                                    class="fas fa-envelope fa-3x b-contact__icon"></i></a>
+                        </div>
+                    </div>
+                    <div class="b-contact__textBox">
+                        <p class="b-contact__textTitle">EMAIL</p>
+                        <p class="b-contact__textSub">hello@codecafe.com</p>
+                        <p class="b-contact__textSub">Personal@codecafe.com</p>
+                    </div>
+                </div>
+
+                <div class="b-contact__items col-md-3 col-sm-7">
+                    <div class="b-contact__officeImg">
+                        <div class="b-contact__imgUp">
+                            <a href="#" class="b-contact__link"><i
+                                    class="fas fa-map-marker-alt fa-3x b-contact__icon"></i></a>
+                        </div>
+                    </div>
+                    <div class="b-contact__textBox">
+                        <p class="b-contact__textTitle">OUR OFFICE</p>
+                        <p class="b-contact__textSub">240 Bhatikhana, 8200 Barisal
+                            <br> Bangladesh</p>
+
+                    </div>
+                </div>
+
+                <div class="b-contact__items col-md-3 col-sm-7">
+                    <div class="b-contact__phoneImg">
+                        <div class="b-contact__imgUp">
+                            <a href="#" class="b-contact__link"><i
+                                    class="fas fa-phone-alt fa-3x b-contact__icon"></i></a>
+                        </div>
+                    </div>
+                    <div class="b-contact__textBox">
+                        <p class="b-contact__textTitle">PHONE</p>
+                        <p class="b-contact__textSub">+00 11 66 99 66 44</p>
+                        <p class="b-contact__textSub">11 99 66 44 065</p>
+
+                    </div>
+                </div>
+            </div>
 
         </section>
+        <section class="b-submit">
+            <form>
+                <div class="row b-submit__formWrap">
+                    <div class="form-group col-md-3 b-submit__formGroup">
+                        <input type="text" class="form-control b-submit__form" placeholder="Your name">
+                    </div>
+                    <div class="form-group col-md-3 b-submit__formGroup">
+                        <input type="text" class="form-control b-submit__form" placeholder="Subject">
+                    </div>
+                    <div class="form-group col-md-3 b-submit__formGroup">
+                        <input type="email" class="form-control b-submit__form" id="exampleInputEmail1"
+                            aria-describedby="emailHelp" placeholder="Email address">
+                    </div>
+                </div>
+                <div class="form-group b-submit__textareaWrap">
+                    <textarea class="form-control b-submit__textarea" id="exampleFormControlTextarea1"
+                        rows="7"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary b-submit__btn">Submit Now</button>
+            </form>
+        </section>
+
 
 
     </div>
