--- a/index.html
+++ b/index.html
@@ -912,16 +912,16 @@
             </div>
 
         </section>
-        <section class="b-submit">
+        <div class="b-submit">
             <form>
                 <div class="row b-submit__formWrap">
-                    <div class="form-group col-md-3 b-submit__formGroup">
+                    <div class="form-group col-lg-3 b-submit__formGroup">
                         <input type="text" class="form-control b-submit__form" placeholder="Your name">
                     </div>
-                    <div class="form-group col-md-3 b-submit__formGroup">
+                    <div class="form-group col-lg-3 b-submit__formGroup">
                         <input type="text" class="form-control b-submit__form" placeholder="Subject">
                     </div>
-                    <div class="form-group col-md-3 b-submit__formGroup">
+                    <div class="form-group col-lg-3 b-submit__formGroup">
                         <input type="email" class="form-control b-submit__form" id="exampleInputEmail1"
                             aria-describedby="emailHelp" placeholder="Email address">
                     </div>
@@ -932,7 +932,21 @@
                 </div>
                 <button type="submit" class="btn btn-primary b-submit__btn">Submit Now</button>
             </form>
-        </section>
+        </div>
+        <div class="b-map">
+            <div class="b-map__wrap">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.103836347769!2d37.61148371586396!3d55.75669839915909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a5aabcde2ed%3A0x8582e80fabd33040!2z0KLQstC10YDRgdC60LDRjyDRg9C7LiwgMSwg0JzQvtGB0LrQstCwLCAxMjUwMDk!5e0!3m2!1sru!2sru!4v1566477956418!5m2!1sru!2sru"
+                    frameborder="0" style="border:0" allowfullscreen class="b-map__google">
+                </iframe>
+
+                <div class="b-map__textUpBox">
+                    <p class="b-map__textUp">FIND US ON THE MAP</p>
+                    <img src="images/slider-hover.png" alt="hover">
+                </div>
+            </div>
+        </div>
+
 
 
 
