finished all sections

--- a/index.html
+++ b/index.html
@@ -946,6 +946,18 @@
                 </div>
             </div>
         </div>
+        <footer class="b-footer">
+            <div class="b-footer__imgWrap"><img src="images/bouncy-footer.png" alt="bouncy-footer"></div>
+            <p class="b-footer__copy">&#169; Copyright 2015. All rights Reserved</p>
+            <div class="b-footer__socials">
+                <a class="b-footer__link b-footer__iconFacebook" href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
+                <a class="b-footer__link b-footer__iconTwitter" href="#"><i class="fab fa-twitter fa-2x"></i></a>
+                <a class="b-footer__link b-footer__iconLinkedin" href="#"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                <a class="b-footer__link b-footer__iconInstagram" href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a class="b-footer__link b-footer__iconVimeo" href="#"><i class="fab fa-vimeo-v fa-2x"></i></a>
+            </div>
+
+        </footer>
 
 
 
