--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans%7CSource+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
@@ -18,28 +18,28 @@
             <header>
                 <div class="b-headerTop">
                     <img src="images/Bouncy-logo.png" alt="logo" class="b-headerTop__logo">
-                    <div class="b-headerTop__menuBox d-none d-lg-block">
+                    <div id="menu" class="b-headerTop__menuBox d-none d-lg-block">
                         <a href="#" class="b-headerTop__menuItems">Hello</a>
-                        <a href="#" class="b-headerTop__menuItems">About</a>
-                        <a href="#" class="b-headerTop__menuItems">Services</a>
-                        <a href="#" class="b-headerTop__menuItems">Portfolio</a>
-                        <a href="#" class="b-headerTop__menuItems">Team</a>
-                        <a href="#" class="b-headerTop__menuItems">Blog</a>
-                        <a href="#" class="b-headerTop__menuItems">Contact</a>
+                        <a href="#about-us" class="b-headerTop__menuItems">About</a>
+                        <a href="#services" class="b-headerTop__menuItems">Services</a>
+                        <a href="#portfolio" class="b-headerTop__menuItems">Portfolio</a>
+                        <a href="#team" class="b-headerTop__menuItems">Team</a>
+                        <a href="#blog" class="b-headerTop__menuItems">Blog</a>
+                        <a href="#contact" class="b-headerTop__menuItems">Contact</a>
                     </div>
                     <div class="dropdown d-block d-lg-none">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
                             Menu
                         </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <div id="dropdownMenu" class="dropdown-menu">
                             <a class="dropdown-item" href="#">Hello</a>
-                            <a class="dropdown-item" href="#">About</a>
-                            <a class="dropdown-item" href="#">Services</a>
-                            <a class="dropdown-item" href="#">Portfolio</a>
-                            <a class="dropdown-item" href="#">Team</a>
-                            <a class="dropdown-item" href="#">Blog</a>
-                            <a class="dropdown-item" href="#">Contact</a>
+                            <a class="dropdown-item" href="#about-us">About</a>
+                            <a class="dropdown-item" href="#services">Services</a>
+                            <a class="dropdown-item" href="#portfolio">Portfolio</a>
+                            <a class="dropdown-item" href="#team">Team</a>
+                            <a class="dropdown-item" href="#blog">Blog</a>
+                            <a class="dropdown-item" href="#contact">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                     <img src="images/IPAD.png" alt="#" class="b-aboutUs__img">
                 </div>
             </section>
-            <section class="b-details row">
+            <section id="about-us" class="b-details">
                 <div class="b-details__titleBox row col-md-12">
                     <h2 class="b-sectionTitle sectionTitleCenter col">DetailS ABOUT BOUNCY</h2>
                     <p class="b-sectionTitle__subtitle sectionSubtitleCenter col">At vero eos et accusamus et
@@ -74,7 +74,7 @@
                         qui <br>
                         blanditiis praesentium
                     </p>
-                    <div class="b-iconsMenu row col">
+                    <div class="b-iconsMenu col-md-12">
                         <div class="b-iconsMenu__item iconHeart b-iconsMenu__item_active col-auto">
                             <a class="b-iconsMenu__link" href="#"></a>
                         </div>
@@ -102,7 +102,7 @@
                         id est laborum et dolorum fuga. Et harum quidem. </p>
                 </div>
             </section>
-            <section class="b-services row">
+            <section id="services" class="b-services row">
                 <div class="b-services__titleBox col-12">
                     <h2 class="b-sectionTitle sectionTitleCenter col">Our Services</h2>
                     <p class="b-sectionTitle__subtitle sectionSubtitleCenter col">At vero eos et accusamus et iusto odio
@@ -110,7 +110,7 @@
                     </p>
                 </div>
                 <div class="b-services__asideContent row col-lg-6">
-                    <div class="b-iconsMenu b-iconsMenu_vertical col-md-2">
+                    <div class="b-iconsMenu_vertical col-md-2">
                         <div class="b-iconsMenu__item b-iconsMenu__item_vertical iconTools">
                             <a class="b-iconsMenu__link" href="#"></a>
                         </div>
@@ -203,7 +203,7 @@
                 </div>
             </section>
             <section class="b-portfolio">
-                <div class="b-portfolio__title">
+                <div id="portfolio" class="b-portfolio__title">
                     <h2 class="b-sectionTitle sectionTitleCenter">THE PORTFOLIO</h2>
                     <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus et iusto odio
                         dignissimos ducimus qui <br> blanditiis praesentium
@@ -219,11 +219,11 @@
                     <a class="b-portfolio__navItems" href="#">Wordpress</a>
                 </div>
                 <div class="dropdown d-block d-lg-none b-portfolio__dropdownMenu">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         Portfolio Menu
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">All Works</a>
                         <a class="dropdown-item" href="#">Print</a>
                         <a class="dropdown-item" href="#">Identity</a>
@@ -515,7 +515,7 @@
                     <a href="#" class="buttonLink buttonFooterSection">Start Project</a>
                 </div>
             </section>
-            <section class="b-team">
+            <section id="team" class="b-team">
                 <div class="b-team__title">
                     <h2 class="b-sectionTitle sectionTitleCenter">THE TEAM</h2>
                     <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus et iusto odio
@@ -701,7 +701,7 @@
                 </div>
             </section>
         </main>
-        <section class="b-reviews">
+        <section id="blog" class="b-reviews">
             <div class="b-reviews__title">
                 <h2 class="b-sectionTitle sectionTitleCenter">Testimonials</h2>
                 <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus et iusto odio
@@ -851,13 +851,12 @@
             </div>
             <form class="b-subscribe__form row">
                 <div class="form-group col-md-4 col-sm-8">
-                    <input type="email" class="form-control b-subscribe__email" id="exampleInputEmail1"
-                        aria-describedby="emailHelp" placeholder="Email Address">
+                    <input type="email" class="form-control b-subscribe__email" placeholder="Email Address">
                 </div>
                 <button type="submit" class="btn btn-primary b-subscribe__submitBtn col-md-2">Submit</button>
             </form>
         </section>
-        <section class="b-contact">
+        <section id="contact" class="b-contact">
             <div class="b-contact__titleBox">
                 <h2 class="b-sectionTitle sectionTitleCenter"> Contact Us</h2>
                 <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus
@@ -922,8 +921,7 @@
                         <input type="text" class="form-control b-submit__form" placeholder="Subject">
                     </div>
                     <div class="form-group col-lg-3 b-submit__formGroup">
-                        <input type="email" class="form-control b-submit__form" id="exampleInputEmail1"
-                            aria-describedby="emailHelp" placeholder="Email address">
+                        <input type="email" class="form-control b-submit__form" placeholder="Email address">
                     </div>
                 </div>
                 <div class="form-group b-submit__textareaWrap">
@@ -937,7 +935,7 @@
             <div class="b-map__wrap">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.103836347769!2d37.61148371586396!3d55.75669839915909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a5aabcde2ed%3A0x8582e80fabd33040!2z0KLQstC10YDRgdC60LDRjyDRg9C7LiwgMSwg0JzQvtGB0LrQstCwLCAxMjUwMDk!5e0!3m2!1sru!2sru!4v1566477956418!5m2!1sru!2sru"
-                    frameborder="0" style="border:0" allowfullscreen class="b-map__google">
+                    style="border:0" allowfullscreen class="b-map__google">
                 </iframe>
 
                 <div class="b-map__textUpBox">
@@ -956,24 +954,20 @@
                 <a class="b-footer__link b-footer__iconInstagram" href="#"><i class="fab fa-instagram fa-2x"></i></a>
                 <a class="b-footer__link b-footer__iconVimeo" href="#"><i class="fab fa-vimeo-v fa-2x"></i></a>
             </div>
-
         </footer>
-
-
-
-
     </div>
     <script src="https://kit.fontawesome.com/37babfd013.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+    <script src="js/scrollAnimation.js">
 
+    </script>
 </body>
 
 
