--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans%7CSource+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Bouncy Template</title>
 </head>
 
@@ -18,7 +18,7 @@
         <main>
             <header>
                 <div class="b-headerTop">
-                    <img src="/images/Bouncy-logo.png" alt="logo" class="b-headerTop__logo">
+                    <img src="images/Bouncy-logo.png" alt="logo" class="b-headerTop__logo">
                     <div id="menu" class="b-headerTop__menuBox d-none d-lg-block">
                         <a href="#" class="b-headerTop__menuItems">Hello</a>
                         <a href="#about-us" class="b-headerTop__menuItems">About</a>
