--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <base href="/bouncy-template/">
+    <!-- <base href="/"> -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -49,7 +51,7 @@
                     <p class="b-headerSlider__desc">At vero eos et accusamus et iusto odio dignissimos ducimus qui
                         blanditiis <br> praesentium voluptatum
                     </p>
-                    <a href="#"><img src="/images/slider-hover.png" alt="hover" class="b-headerSlider__hover "></a>
+                    <a href="#"><img src="images/slider-hover.png" alt="hover" class="b-headerSlider__hover "></a>
                 </div>
             </header>
             <section class="b-aboutUs row">
@@ -64,7 +66,7 @@
                     <a href="#" class="buttonLink buttonLinkAbout">Read More</a>
                 </div>
                 <div class="b-aboutUs__imgBox col-md-3">
-                    <img src="/images/IPAD.png" alt="#" class="b-aboutUs__img">
+                    <img src="images/IPAD.png" alt="#" class="b-aboutUs__img">
                 </div>
             </section>
             <section id="about-us" class="b-details">
@@ -200,7 +202,7 @@
                             Cafe</span></p>
                 </div>
                 <div class="b-impressed__imgBox col-xl-5">
-                    <img src="/images/impressed-img.png" alt="impressed-img" class="b-impressed__img">
+                    <img src="images/impressed-img.png" alt="impressed-img" class="b-impressed__img">
                 </div>
             </section>
             <section class="b-portfolio">
@@ -532,7 +534,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="b-team__carouselItems row">
-                                <div class="b-team__fotoBox col-md-3"><img src="/images/team-img.png" alt="team-img"
+                                <div class="b-team__fotoBox col-md-3"><img src="images/team-img.png" alt="team-img"
                                         class="b-team__foto"></div>
                                 <div class="b-team__carouselAside col-md-4">
                                     <div class="b-team__fotoDescWrap">
@@ -583,7 +585,7 @@
 
                         <div class="carousel-item">
                             <div class="b-team__carouselItems row">
-                                <div class="b-team__fotoBox col-md-3"><img src="/images/team-img2.jpeg" alt="team-img"
+                                <div class="b-team__fotoBox col-md-3"><img src="images/team-img2.jpeg" alt="team-img"
                                         class="b-team__foto"></div>
                                 <div class="b-team__carouselAside col-md-4">
                                     <div class="b-team__fotoDescWrap">
@@ -635,7 +637,7 @@
 
                         <div class="carousel-item">
                             <div class="b-team__carouselItems row">
-                                <div class="b-team__fotoBox col-md-3"><img src="/images/team-img3.jpeg" alt="team-img"
+                                <div class="b-team__fotoBox col-md-3"><img src="images/team-img3.jpeg" alt="team-img"
                                         class="b-team__foto"></div>
                                 <div class="b-team__carouselAside col-md-4">
                                     <div class="b-team__fotoDescWrap">
@@ -714,7 +716,7 @@
                     <div class="carousel-item active">
                         <div class="b-reviews__carouselItem row">
                             <div class="b-reviews__imgBox col-lg-2">
-                                <img src="/images/testimonials-img.png" class="b-reviews__img" alt="review-img">
+                                <img src="images/testimonials-img.png" class="b-reviews__img" alt="review-img">
                             </div>
                             <div class="b-reviews__reviewBox col-lg-8">
                                 <p class="b-reviews__reviewText">At vero eos et accusamus et iusto odio dignissimos
@@ -732,7 +734,7 @@
                     <div class="carousel-item">
                         <div class="b-reviews__carouselItem row">
                             <div class="b-reviews__imgBox col-lg-2">
-                                <img src="/images/testimonials-img.png" class="b-reviews__img" alt="review-img">
+                                <img src="images/testimonials-img.png" class="b-reviews__img" alt="review-img">
                             </div>
                             <div class="b-reviews__reviewBox col-lg-8">
                                 <p class="b-reviews__reviewText">At vero eos et accusamus et iusto odio dignissimos
@@ -750,7 +752,7 @@
                     <div class="carousel-item">
                         <div class="b-reviews__carouselItem row">
                             <div class="b-reviews__imgBox col-lg-2">
-                                <img src="/images/testimonials-img.png" class="b-reviews__img" alt="review-img">
+                                <img src="images/testimonials-img.png" class="b-reviews__img" alt="review-img">
                             </div>
                             <div class="b-reviews__reviewBox col-lg-8">
                                 <p class="b-reviews__reviewText">At vero eos et accusamus et iusto odio dignissimos
@@ -941,12 +943,12 @@
 
                 <div class="b-map__textUpBox">
                     <p class="b-map__textUp">FIND US ON THE MAP</p>
-                    <img src="/images/slider-hover.png" alt="hover">
+                    <img src="images/slider-hover.png" alt="hover">
                 </div>
             </div>
         </div>
         <footer class="b-footer">
-            <div class="b-footer__imgWrap"><img src="/images/bouncy-footer.png" alt="bouncy-footer"></div>
+            <div class="b-footer__imgWrap"><img src="images/bouncy-footer.png" alt="bouncy-footer"></div>
             <p class="b-footer__copy">&#169; Copyright 2015. All rights Reserved</p>
             <div class="b-footer__socials">
                 <a class="b-footer__link b-footer__iconFacebook" href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
@@ -966,8 +968,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
-    <script src="/js/scrollAnimation.js"></script>
-    <script src="/js/progressBarOnScroll.js"></script>
+    <script src="js/scrollAnimation.js"></script>
+    <script src="js/progressBarOnScroll.js"></script>
 </body>
 
 
