change dropdown menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a href="#blog" class="b-headerTop__menuItems">Blog</a>
                         <a href="#contact" class="b-headerTop__menuItems">Contact</a>
                     </div>
-                    <div class="dropdown d-block d-lg-none">
+                    <div class="dropleft d-block d-lg-none">
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             Menu
