fix section animation price

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a href="#" class="buttonLink buttonLinkAbout">Read More</a>
                 </div>
                 <div class="b-aboutUs__imgBox col-md-3">
-                    <img src="/images/IPAD.png" alt="#" class="b-aboutUs__img">
+                    <img src="/images/IPAD.png" alt="ipad" class="b-aboutUs__img">
                 </div>
             </section>
             <section id="about-us" class="b-details">
